<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawer">



    <Button
        android:gravity="center"
        android:id="@+id/add_city_btn"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_city"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"/>


    <TextView
        android:textColor="@android:color/white"
        android:layout_above="@+id/email"
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>