<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:minHeight="25dp"
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginBottom="16dp"
                app:expandedTitleMarginStart="8dp"
                app:contentScrim="@color/colorAccent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                tools:context=".activity.MainActivity">

                <RelativeLayout
                    android:background="@drawable/bg_header"
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/update_time"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/update" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/update_time"
                        android:layout_alignParentEnd="true"
                        android:text="@string/temp"
                        android:textSize="@dimen/temp_main"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/temp"
                        android:layout_alignParentEnd="true"
                        android:text="@string/weather_conditon"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="4dp"
                        android:text="@string/city"
                        android:textSize="@dimen/city_txt"
                        android:textColor="@android:color/white"/>


                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    />
            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <FrameLayout

            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>
